AC_INIT([TFT], [0.5], [nils.drechsel@upf.edu], [TFT], [http://cbbl.imim.es])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
#AC_SUBST([TRIFORCETOOL_SO_VERSION], [1:0:0])
#AC_SUBST([TRIFORCETOOL_VERSION], [0.27])

PKG_CHECK_MODULES([TRIFORCE], [triforce-0.39 >= 0])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
